meta tags add for contact and og image

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,65 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nauquest</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Contact Us – Nauquest</title>
+    <meta
+      name="description"
+      content="Get in touch with Nauquest to plan your perfect experience in Greece. We’re here to help!"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- SEO -->
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://nauquest.com/contact" />
+
+    <!-- Favicons -->
+    <link rel="icon" href="/assets/favicon/favicon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon/apple-touch-icon.png"
+    />
+    <meta name="theme-color" content="#1A2642" />
+
+    <!-- Open Graph / Facebook & LinkedIn -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nauquest.com/contact" />
+    <meta property="og:title" content="Contact Us – Nauquest" />
+    <meta
+      property="og:description"
+      content="Get in touch with Nauquest to plan your perfect experience in Greece. We’re here to help!"
+    />
+    <meta
+      property="og:image"
+      content="https://nauquest.com/assets/images/nauquest-ogimage.png"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://nauquest.com/contact" />
+    <meta name="twitter:title" content="Contact Us – Nauquest" />
+    <meta
+      name="twitter:description"
+      content="Get in touch with Nauquest to plan your perfect experience in Greece. We’re here to help!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://nauquest.com/assets/images/nauquest-ogimage.png"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
