--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     />
     <meta
       property="og:image"
-      content="https://nauquest.com/assets/images/logo.png"
+      content="https://nauquest.com/assets/images/nauquest-ogimage.png"
     />
 
     <!-- Twitter Card -->
@@ -57,15 +57,15 @@
     <meta name="twitter:url" content="https://nauquest.com/" />
     <meta
       name="twitter:title"
-      content="Nauquest – Tailored Athens Concierge Service"
+      content="Nauquest - Tailored Experiences in Greece"
     />
     <meta
       name="twitter:description"
-      content="Tailored tours, transfers, cruises &amp; dining — worry-free from arrival to departure"
+      content="Tailored tours, transfers, cruises & dining worry-free from arrival to departure."
     />
     <meta
       name="twitter:image"
-      content="https://nauquest.com/assets/images/logo.png"
+      content="https://nauquest.com/assets/images/nauquest-ogimage.png"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
